Fix z-index issue with selectize tags in image field

--- a/wire/modules/Inputfield/InputfieldImage/InputfieldImage.scss
+++ b/wire/modules/Inputfield/InputfieldImage/InputfieldImage.scss
@@ -393,6 +393,7 @@ $itemPadding: 0.4em;
 	&--active,
 	&Single {
 		display: block;
+		z-index: 100;
 	}
 
 	&__inner {
